# effectivemobile_test

./: README.md  main.py  phonebook.csv  pyproject.toml  src.py
